--- a/package.json
+++ b/package.json
@@ -5,28 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon ./src/server --exec babel-node"
+    "start": "node bin/run-server"
   },
   "keywords": [],
   "author": "Jonathan Kupcho",
   "license": "MIT",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "exenv": "^1.2.0",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-server": "^0.1.4",
     "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "nodemon": "^1.9.1",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0"
